--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Temperature</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>My To-Do List</h1>
-        <input type="text" id="taskInput" placeholder="Add a new task">
-        <button id="addTaskButton">Add Task</button>
-        <ul id="taskList"></ul>
-    </div>
+    <h1>Temperature Converter</h1>
+    
+    <input type="number" id="temperature" placeholder="Enter Temperature">
 
+    <select id="unit">
+        <option value="CtoF">Celsius to Fahrenheit</option>
+        <option value="Ftoc">Fahrenheit to Celsius</option>
+    </select>
+
+    <button onclick="convertTemp()">Convert</button>
+
+    <p id="result"></p>
     <script src="script.js"></script>
 </body>
 </html>
